syntax = "proto3";
package VrLifeShared.Core.Applications.DefaultApps.ChatApp.NetworkingModels;

import "ChatRequest.proto";
import "ChatObjectMsg.proto";
import "ChatList.proto";


message ChatAppMsg {
	ChatRequest request = 1;
	ChatObjectMsg chat = 2;
	ChatList list = 3;
}