syntax = "proto3";
package VrLifeShared.Core.Applications.DefaultApps.ChatApp.NetworkingModels;

import "ChatMessage.proto";

message ChatObjectMsg {
	uint64 latestUpdate = 1;
	uint64 user1 = 2;
	uint64 user2 = 3;
	repeated ChatMessage messages = 4;
}